brainstorm tasks complete, all 6 agents reported back

--- a/tasks.json
+++ b/tasks.json
@@ -6,7 +6,7 @@
       "title": "Brainstorm: 10 Dev Priorities for Tomorrow",
       "description": "Identify 10 high-impact development tasks aligned with mission statement — automation, estimating, systems.",
       "assignee": "bolt",
-      "status": "in-progress",
+      "status": "done",
       "priority": "high",
       "category": "dev",
       "created": "2026-02-18",
@@ -17,7 +17,7 @@
       "title": "Brainstorm: 10 Content Priorities for Tomorrow",
       "description": "Identify 10 high-impact content tasks — early-season booking, brand building, commercial lead generation.",
       "assignee": "ink",
-      "status": "in-progress",
+      "status": "done",
       "priority": "high",
       "category": "content",
       "created": "2026-02-18",
@@ -28,7 +28,7 @@
       "title": "Brainstorm: 10 Analytics Priorities for Tomorrow",
       "description": "Identify 10 high-impact analysis tasks — pricing optimization, bid tracking, crew efficiency, competitive intel.",
       "assignee": "gauge",
-      "status": "in-progress",
+      "status": "done",
       "priority": "high",
       "category": "analytics",
       "created": "2026-02-18",
@@ -39,7 +39,7 @@
       "title": "Brainstorm: 10 Prospecting Priorities for Tomorrow",
       "description": "Identify 10 high-impact lead generation tasks — commercial targets, pipeline building, property research.",
       "assignee": "radar",
-      "status": "in-progress",
+      "status": "done",
       "priority": "high",
       "category": "sales",
       "created": "2026-02-18",
@@ -50,7 +50,7 @@
       "title": "Brainstorm: 10 Operations Priorities for Tomorrow",
       "description": "Identify 10 high-impact ops tasks — pre-season prep, SOPs, crew readiness, equipment, scheduling.",
       "assignee": "dispatch",
-      "status": "in-progress",
+      "status": "done",
       "priority": "high",
       "category": "operations",
       "created": "2026-02-18",
@@ -61,7 +61,7 @@
       "title": "Brainstorm: 10 Design Priorities for Tomorrow",
       "description": "Identify 10 high-impact design tasks — customer-facing materials, app UX, brand consistency, mobile experience.",
       "assignee": "pixel",
-      "status": "in-progress",
+      "status": "done",
       "priority": "high",
       "category": "design",
       "created": "2026-02-18",
